# webdata-wp3-phim

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  pylock.toml  pyproject.toml
.devcontainer/: Dockerfile
.github/workflows/: release.yml  test.yml
python/hashcalc/: __init__.py  _native.pyi  api.py  hashcalc.py
python/phim/: __init__.py  _native.pyi
src/: lib.rs
tests/: conftest.py
tests/hashcalc/: test_compute_hamming_distance.py  test_compute_hamming_distances.py  test_compute_pdq_hash.py  test_compute_phash.py  test_hamming_distance.py
tests/phim/: test_compute_hamming_distance.py  test_compute_hamming_distances.py  test_compute_pdq_hash.py  test_compute_phash.py
