[package]
name = "phim"
version = "0.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "phim"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.25"
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py311", "generate-import-lib"] }
imagehash = "0.3.0"
image = "0.24.9"

[package.metadata.clippy]
deny = ["clippy::all", "clippy::pedantic", "clippy::cargo"]
